# QuickEntity

./: README.md  Read_me.md  fast_ner.py  pyproject.toml  quick_ner.py  quickentity.py
src/: example
src/fast_ner_examples/: fast_ner_example.py  quick_ner_example.py  quickentity_example.py
tests/: ent_list.json  main.py  phrase_is_required.py  save_model_is_false.py
