[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "fast_ner"
version = "1.0.4"
authors = [
  { name="Kayenga Campos", email="kayengacampos@gmail.com" },
]
description = "A library written in python to train Named Entity Recognition with Spacy Back-End easily and quickly."
readme = "README.md"

dependencies = [
"spacy >= 3.5.0",
"nltk >= 3.7"
]

requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/kissabi/fast_ner"
"Bug Tracker" = "https://github.com/kissabi/fast_ner/issues"