[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "QuickEntity"
version = "0.0.1"
authors = [
  { name="Kayenga Campos", email="kayengacampos@gmail.com" },
]
description = "A library to train Named Entity Recognition on Spacy-based easily and quickly."
readme = "README.md"

dependencies = [
"spacy >= 3.4.4",
"nltk >= 3.7"
]

requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/kissabi/quickentity"
"Bug Tracker" = "https://github.com/kissabi/quickentity/issues"